@@ -2,6 +2,7 @@
 	- Add Zone.removeRecord() (based on code from Adam Cassar
 	  <adam.cassar@netregistry.com.au>)
 	- Add Zone.toMasterFile() (based on code from Adam Cassar)
+	- Performance enhancements to the Name object.
 
 6/16/2002
 	- Update lots of code to use Collections instead of JDK 1.1
